--- a/.github/workflows/main_quickai-backend.yml
+++ b/.github/workflows/main_quickai-backend.yml
@@ -1,5 +1,5 @@
-# # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# # More GitHub Actions for Azure: https://github.com/Azure/actions
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
 
 # name: Build and deploy Node.js app to Azure Web App - quickai-backend
 
@@ -82,20 +82,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
 
-      - name: Install dependencies
-        run: npm install
-        working-directory: easyprompt/server   # ✅ run inside server folder
+      - name: npm install, build, and test
+        run: |
+          cd easyprompt-app-main/server
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
-      - name: Upload artifact for deployment
+      - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: easyprompt/server
+          path: easyprompt-app-main/server
 
   deploy:
     runs-on: ubuntu-latest
@@ -105,11 +108,11 @@ jobs:
       contents: read
 
     steps:
-      - name: Download artifact
+      - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -118,9 +121,10 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D5293AB6B0D04A0099251BC14AF4C203 }}
 
       - name: Deploy to Azure Web App
+        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'quickai-backend'
           slot-name: 'Production'
-          package: .
+          package: easyprompt-app-main/server
 
