--- a/.github/workflows/main_quickai-backend.yml
+++ b/.github/workflows/main_quickai-backend.yml
@@ -126,5 +126,5 @@ jobs:
         with:
           app-name: 'quickai-backend'
           slot-name: 'Production'
-          package: easyprompt-app-main/server
+          package: .
 
